--- a/www/package.json
+++ b/www/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "astro build",
+    "build": "astro build && cp -r ../packages/storybook/storybook dist",
     "dev": "astro dev",
     "format": "biome format --write src",
     "lint": "pnpm run \"/^lint:.*/\"",
@@ -30,6 +30,7 @@
     "@astrojs/mdx": "^3.1.2",
     "@astrojs/react": "3.6.0",
     "@astrojs/starlight": "^0.24.5",
+    "@terrazzo/storybook": "workspace:^",
     "@types/react": "npm:types-react@rc",
     "@types/react-dom": "npm:types-react-dom@rc",
     "astro": "^4.11.3",
