--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "prettier": "^3.3.2",
     "strip-ansi": "^7.1.0",
     "stylelint": "^16.6.1",
+    "stylelint-config-standard": "^36.0.1",
+    "stylelint-order": "^6.0.4",
     "typescript": "^5.5.2",
     "vitest": "^1.6.0"
   }
