--- a/packages/react-color-picker/package.json
+++ b/packages/react-color-picker/package.json
@@ -19,10 +19,12 @@
   "scripts": {
     "build": "rollup -c rollup.config.js && size-limit",
     "dev": "pnpm run build && chokidar \"./src/**/*\" -c \"rollup -c rollup.config.js\"",
-    "format": "biome format --write src",
+    "format": "pnpm run \"/&lint:.*/\"",
+    "format:js": "biome format --write \"src/**/*.js\"",
+    "format:css": "stylelint --fix \"src/**/*.css\"",
     "lint": "pnpm run \"/^lint:.*/\"",
     "lint:js": "biome check src",
-    "lint:css": "stylelint src",
+    "lint:css": "stylelint \"src/**/*.css\"",
     "test": "vitest run"
   },
   "peerDependencies": {
