--- a/packages/cli/biome.json
+++ b/packages/cli/biome.json
@@ -2,7 +2,7 @@
   "$schema": "https://biomejs.dev/schemas/1.6.4/schema.json",
   "extends": ["../../biome.json"],
   "files": {
-    "include": ["./src/", "./test/"],
+    "include": ["./bin/", "./src/", "./test/"],
     "ignore": ["./test/fixtures/**/*.json", "./test/fixtures/**/*.js", "./test/fixtures/**/*.d.ts"]
   },
   "linter": {
@@ -11,5 +11,17 @@
         "noConsoleLog": "off"
       }
     }
-  }
+  },
+  "overrides": [
+    {
+      "include": ["./bin/cli.js"],
+      "linter": {
+        "rules": {
+          "suspicious": {
+            "noConsoleLog": "off"
+          }
+        }
+      }
+    }
+  ]
 }
