--- a/packages/plugin-tailwind/package.json
+++ b/packages/plugin-tailwind/package.json
@@ -26,6 +26,7 @@
     "build:clean": "del dist",
     "build:ts": "tsc -p tsconfig.build.json",
     "build:license": "node ../../scripts/inject-license.js @cobalt-ui/plugin-tailwind dist/index.js",
+    "format": "biome format --write .",
     "dev": "tsc  -p tsconfig.build.json -w",
     "lint": "biome check .",
     "test": "pnpm run \"/^test:.*/\"",
