--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -6,12 +6,17 @@
   "license": "MIT",
   "scripts": {
     "dev": "pnpm run sb",
-    "build-storybook": "sb build",
+    "build": "sb build -o storybook",
     "format": "biome format --write src",
     "lint": "pnpm run \"/^lint:.*/\"",
     "lint:js": "biome check src",
-    "lint:css": "stylelint src",
+    "lint:css": "stylelint \"src/**/*.css\"",
     "sb": "sb dev -p 9009"
+  },
+  "dependencies": {
+    "culori": "^4.0.1",
+    "react": "19.0.0-rc-58af67a8f8-20240628",
+    "react-dom": "19.0.0-rc-e02baf6c92-20240627"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^8.1.11",
@@ -28,12 +33,9 @@
     "@types/react": "npm:types-react@rc",
     "@types/react-dom": "npm:types-react-dom@rc",
     "@vitejs/plugin-react-swc": "^3.7.0",
-    "culori": "^4.0.1",
-    "react": "19.0.0-rc-e02baf6c92-20240627",
-    "react-dom": "19.0.0-rc-e02baf6c92-20240627",
     "storybook": "^8.1.11",
-    "types-react": "19.0.0-alpha.3",
-    "types-react-dom": "19.0.0-alpha.3",
+    "types-react": "19.0.0-rc.1",
+    "types-react-dom": "19.0.0-rc.1",
     "vite": "^5.3.2"
   },
   "overrides": {
