--- a/packages/token-lab/package.json
+++ b/packages/token-lab/package.json
@@ -3,7 +3,11 @@
   "description": "Create, edit, and safe tokens.json in DTCG format",
   "version": "0.0.0",
   "type": "module",
-  "keywords": ["dtcg", "design tokens", "tokens.json"],
+  "keywords": [
+    "dtcg",
+    "design tokens",
+    "tokens.json"
+  ],
   "author": {
     "name": "Drew Powers",
     "email": "drew@pow.rs"
@@ -36,8 +40,8 @@
     "@types/react": "npm:types-react@rc",
     "@types/react-dom": "npm:types-react-dom@rc",
     "@vitejs/plugin-react-swc": "^3.7.0",
-    "react": "19.0.0-rc-e02baf6c92-20240627",
-    "react-dom": "19.0.0-rc-e02baf6c92-20240627",
+    "react": "19.0.0-rc-58af67a8f8-20240628",
+    "react-dom": "19.0.0-rc-58af67a8f8-20240628",
     "vite": "^5.3.2"
   },
   "overrides": {
