--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@terrazzo/storybook",
+  "name": "@terrazzo-internal/storybook",
   "private": true,
   "version": "0.0.0",
   "type": "module",
