--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -51,6 +51,7 @@
     "yargs-parser": "^21.1.1"
   },
   "devDependencies": {
-    "execa": "^9.3.0"
+    "execa": "^9.3.0",
+    "typescript": "^5.5.3"
   }
 }
