--- a/www/package.json
+++ b/www/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@terrazzo/www",
+  "name": "@terrazzo-internal/www",
   "private": true,
   "type": "module",
   "scripts": {
@@ -30,7 +30,7 @@
     "@astrojs/mdx": "^3.1.2",
     "@astrojs/react": "3.6.0",
     "@astrojs/starlight": "^0.24.5",
-    "@terrazzo/storybook": "workspace:^",
+    "@terrazzo-internal/storybook": "workspace:^",
     "@types/react": "npm:types-react@rc",
     "@types/react-dom": "npm:types-react-dom@rc",
     "astro": "^4.11.3",
