--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           version: latest
           run_install: true
-      - run: pnpm run build:packages
+      - run: pnpm run build
       - run: pnpm run lint
   test:
     strategy:
@@ -39,5 +39,5 @@ jobs:
         with:
           version: latest
           run_install: true
-      - run: pnpm run build:packages
+      - run: pnpm run build
       - run: pnpm test
