--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "pnpm run -r --if-present build",
-    "build:packages": "pnpm --filter \"@terrazzo/*\" run -r build ",
+    "build:apps": "pnpm run build && pnpm run -r --if-present build:app",
     "build:examples": "pnpm run -r --parallel --if-present build:tokens",
     "changeset": "changeset",
     "dev": "pnpm run -r --parallel --if-present dev",
