--- a/www/package.json
+++ b/www/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@terrazzo-internal/www",
+  "name": "@terrazzo/www",
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "astro build && cp -r ../packages/storybook/storybook dist",
+    "build:app": "astro build && cp -r ../packages/storybook/storybook dist",
     "dev": "astro dev",
     "format": "biome format --write src",
     "lint": "pnpm run \"/^lint:.*/\"",
@@ -30,7 +30,7 @@
     "@astrojs/mdx": "^3.1.2",
     "@astrojs/react": "3.6.0",
     "@astrojs/starlight": "^0.24.5",
-    "@terrazzo-internal/storybook": "workspace:^",
+    "@terrazzo/storybook": "workspace:^",
     "@types/react": "npm:types-react@rc",
     "@types/react-dom": "npm:types-react-dom@rc",
     "astro": "^4.11.3",
