--- a/packages/plugin-lint-a11y/package.json
+++ b/packages/plugin-lint-a11y/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@terrazzo/plugin-lint-a11y",
   "version": "0.0.0",
+  "private": true,
   "type": "module",
   "description": "Add accessibility linting checks for your DTCG design tokens",
   "keywords": [
