--- a/packages/plugin-tailwind/package.json
+++ b/packages/plugin-tailwind/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@terrazzo/plugin-tailwind",
   "version": "0.0.0",
+  "private": true,
   "type": "module",
   "author": {
     "name": "Drew Powers",
