--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@changesets/cli": "^2.27.7",
     "@types/node": "^20.14.10",
     "del-cli": "^5.1.0",
+    "execa": "^9.3.0",
     "prettier": "^3.3.2",
     "strip-ansi": "^7.1.0",
     "stylelint": "^16.6.1",
