--- a/www/package.json
+++ b/www/package.json
@@ -22,8 +22,8 @@
     "@terrazzo/use-color": "workspace:^",
     "algoliasearch": "^4.24.0",
     "nanoid": "^5.0.7",
-    "react": "19.0.0-rc-f38c22b244-20240704",
-    "react-dom": "19.0.0-rc-f38c22b244-20240704",
+    "react": "19.0.0-rc-85acf2d195-20240711",
+    "react-dom": "19.0.0-rc-85acf2d195-20240711",
     "react-instantsearch": "^7.11.4"
   },
   "devDependencies": {
@@ -38,6 +38,8 @@
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
     "remark-directive": "^3.0.0",
+    "types-react": "19.0.0-rc.1",
+    "types-react-dom": "19.0.0-rc.1",
     "unist-util-visit": "^5.0.0",
     "vite": "^5.3.2",
     "vite-plugin-sass-dts": "^1.3.22",
