--- a/www/package.json
+++ b/www/package.json
@@ -22,9 +22,9 @@
     "@terrazzo/use-color": "workspace:^",
     "algoliasearch": "^4.24.0",
     "nanoid": "^5.0.7",
-    "react": "19.0.0-rc-f38c22b244-20240704",
-    "react-dom": "19.0.0-rc-f38c22b244-20240704",
-    "react-instantsearch": "^7.11.4"
+    "react": "19.0.0-rc-85acf2d195-20240711",
+    "react-dom": "19.0.0-rc-85acf2d195-20240711",
+    "react-instantsearch": "^7.12.1"
   },
   "devDependencies": {
     "@astrojs/mdx": "^3.1.2",
@@ -33,14 +33,16 @@
     "@terrazzo/storybook": "workspace:^",
     "@types/react": "npm:types-react@rc",
     "@types/react-dom": "npm:types-react-dom@rc",
-    "astro": "^4.11.3",
+    "astro": "^4.11.5",
     "json5": "^2.2.3",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
     "remark-directive": "^3.0.0",
+    "types-react": "19.0.0-rc.1",
+    "types-react-dom": "19.0.0-rc.1",
     "unist-util-visit": "^5.0.0",
-    "vite": "^5.3.2",
-    "vite-plugin-sass-dts": "^1.3.22",
+    "vite": "^5.3.3",
+    "vite-plugin-sass-dts": "^1.3.24",
     "vite-tsconfig-paths": "^4.3.2"
   },
   "overrides": {
