--- a/packages/token-lab/package.json
+++ b/packages/token-lab/package.json
@@ -40,8 +40,8 @@
     "@types/react": "npm:types-react@rc",
     "@types/react-dom": "npm:types-react-dom@rc",
     "@vitejs/plugin-react-swc": "^3.7.0",
-    "react": "19.0.0-rc-85acf2d195-20240711",
-    "react-dom": "19.0.0-rc-85acf2d195-20240711",
+    "react": "19.0.0-rc-01172397-20240716",
+    "react-dom": "19.0.0-rc-01172397-20240716",
     "types-react": "19.0.0-rc.1",
     "types-react-dom": "19.0.0-rc.1",
     "vite": "^5.3.3"
