--- a/packages/token-tools/package.json
+++ b/packages/token-tools/package.json
@@ -39,10 +39,10 @@
     "build:clean": "del dist",
     "build:ts": "tsc -p tsconfig.build.json",
     "build:license": "node ../../scripts/inject-license.js @cobalt-ui/core dist/index.js",
-    "dev": "pnpm run --parallel \"/^dev:.*/\"",
+    "dev": "pnpm --filter @terrazzo/token-tools run --parallel \"/^dev:.*/\"",
     "lint": "biome check .",
     "dev:ts": "tsc -p tsconfig.build.json --watch",
-    "test": "pnpm run \"/^test:.*/\"",
+    "test": "pnpm --filter @terrazzo/token-tools run \"/^test:.*/\"",
     "test:js": "vitest run",
     "test:ts": "tsc --noEmit"
   },
