--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -31,7 +31,7 @@
   "license": "MIT",
   "scripts": {
     "lint": "biome check .",
-    "test": "pnpm run \"/^test:.*/\"",
+    "test": "pnpm --filter @terrazzo/parser run \"/^test:.*/\"",
     "test:js": "vitest run",
     "test:ts": "tsc --noEmit"
   },
