--- a/packages/plugin-sass/package.json
+++ b/packages/plugin-sass/package.json
@@ -23,7 +23,7 @@
     "build:license": "node ../../scripts/inject-license.js @terrazzo/plugin-sass dist/index.js",
     "dev": "tsc -p tsconfig.build.json -w",
     "lint": "biome check .",
-    "test": "pnpm run \"/^test:.*/\"",
+    "test": "pnpm --filter @terrazzo/plugin-sass run \"/^test:.*/\"",
     "test:js": "vitest run",
     "test:ts": "tsc --noEmit"
   },
