--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -8,7 +8,7 @@
     "dev": "pnpm run sb",
     "build:app": "sb build -o storybook",
     "format": "biome format --write src",
-    "lint": "pnpm run \"/^lint:.*/\"",
+    "lint": "pnpm run --filter @terrazzo/storybook \"/^lint:.*/\"",
     "lint:js": "biome check src",
     "lint:css": "stylelint \"src/**/*.css\"",
     "sb": "sb dev -p 9009"
@@ -31,8 +31,8 @@
     "@types/react": "npm:types-react@rc",
     "@types/react-dom": "npm:types-react-dom@rc",
     "@vitejs/plugin-react-swc": "^3.7.0",
-    "react": "19.0.0-rc-85acf2d195-20240711",
-    "react-dom": "19.0.0-rc-85acf2d195-20240711",
+    "react": "19.0.0-rc-01172397-20240716",
+    "react-dom": "19.0.0-rc-01172397-20240716",
     "storybook": "^8.2.2",
     "types-react": "19.0.0-rc.1",
     "types-react-dom": "19.0.0-rc.1",
