--- a/packages/plugin-js/package.json
+++ b/packages/plugin-js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@terrazzo/plugin-js",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Generate JS, TS, and JSON from your design tokens schema (requires @terrazzo/cli)",
   "type": "module",
   "author": {
@@ -23,7 +23,7 @@
     "build:license": "node ../../scripts/inject-license.js @terrazzo/plugin-js dist/index.js",
     "dev": "tsc -p tsconfig.build.json -w",
     "lint": "biome check .",
-    "test": "pnpm run --parallel \"/^test:*/\"",
+    "test": "pnpm --filter @terrazzo/plugin-js run \"/^test:*/\"",
     "test:js": "vitest run",
     "test:ts": "tsc --noEmit"
   },
