--- a/packages/plugin-css/package.json
+++ b/packages/plugin-css/package.json
@@ -1,13 +1,19 @@
 {
   "name": "@terrazzo/plugin-css",
-  "version": "0.0.7",
-  "description": "Generate CSS from your design tokens schema (requires @terrazzo/cli)",
+  "version": "0.0.8",
+  "description": "Convert DTCG tokens into CSS variables for use in any web application or native app with webview.",
   "type": "module",
   "author": {
     "name": "Drew Powers",
     "email": "drew@pow.rs"
   },
-  "keywords": ["design tokens", "design system", "dtcg", "w3c", "css"],
+  "keywords": [
+    "design tokens",
+    "design system",
+    "dtcg",
+    "w3c",
+    "css"
+  ],
   "main": "./dist/index.js",
   "homepage": "https://terrazzoapp.com/docs/cli/integrations/css",
   "repository": {
@@ -32,7 +38,8 @@
   },
   "dependencies": {
     "@terrazzo/parser": "workspace:^",
-    "@terrazzo/token-tools": "workspace:^"
+    "@terrazzo/token-tools": "workspace:^",
+    "scule": "^1.3.0"
   },
   "devDependencies": {
     "@terrazzo/cli": "workspace:^"
