--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -33,7 +33,7 @@
   },
   "scripts": {
     "build": "pnpm run build:clean && pnpm run build:ts",
-    "build:clean": "del dist",
+    "build:clean": "del-cli dist",
     "build:ts": "tsc -p tsconfig.build.json",
     "dev": "tsc -p tsconfig.build.json -w",
     "lint": "biome check .",
