Add utility CSS (#279)
* Add utility CSS

* Fix Rollup warnings

* Improve Windows CI (maybe)

* Minor README fixes

* Sort imports

* Aggregate output

--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "pnpm run -r --if-present build",
-    "build:apps": "pnpm run build && pnpm run -r --if-present build:app",
-    "build:examples": "pnpm run -r --parallel --if-present build:tokens",
+    "build": "pnpm run -r --if-present --aggregate-output build",
+    "build:apps": "pnpm run build && pnpm run -r --if-present --aggregate-output build:app",
+    "build:examples": "pnpm run -r --parallel --if-present --aggregate-output build:tokens",
     "changeset": "changeset",
+    "inject-license": "node scripts/inject-license.js",
     "dev": "pnpm run -r --parallel --if-present dev",
-    "lint": "pnpm run -r --parallel --if-present lint",
-    "format": "pnpm run -r --parallel --if-present format",
+    "lint": "pnpm run -r --parallel --if-present --aggregate-output lint",
+    "format": "pnpm run -r --parallel --if-present --aggregate-output format",
     "test": "pnpm run -r --if-present --aggregate-output --parallel test",
     "prepublishOnly": "pnpm run build",
     "version": "pnpm run build && changeset version && pnpm i --no-frozen-lockfile"
