--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "repository": {
     "type": "git",
-    "url": "https://github.com/drwpow/cobalt-ui.git"
+    "url": "https://github.com/terrazzoapp/terrazzo.git"
   },
   "homepage": "https://cobalt-ui.pages.dev",
   "scripts": {
