--- a/packages/plugin-js/package.json
+++ b/packages/plugin-js/package.json
@@ -17,7 +17,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/drwpow/cobalt-ui.git",
+    "url": "git+https://github.com/terrazzoapp/terrazzo.git",
     "directory": "packages/plugin-js"
   },
   "homepage": "https://cobalt-ui.pages.dev",
