--- a/packages/plugin-tailwind/package.json
+++ b/packages/plugin-tailwind/package.json
@@ -18,7 +18,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/drwpow/cobalt-ui.git",
+    "url": "git+https://github.com/terrazzoapp/terrazzo.git",
     "directory": "packages/plugin-tailwind"
   },
   "license": "MIT",
