--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "repository": {
     "type": "git",
-    "url": "https://github.com/drwpow/cobalt-ui.git"
+    "url": "https://github.com/terrazzoapp/terrazzo.git"
   },
   "homepage": "https://cobalt-ui.pages.dev",
   "scripts": {
@@ -19,12 +19,12 @@
     "version": "pnpm run build && changeset version && pnpm i --no-frozen-lockfile"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.8.1",
+    "@biomejs/biome": "^1.8.3",
     "@changesets/changelog-github": "^0.5.0",
-    "@changesets/cli": "^2.27.5",
-    "@types/node": "^20.14.2",
+    "@changesets/cli": "^2.27.7",
+    "@types/node": "^20.14.11",
     "del-cli": "^5.1.0",
-    "typescript": "^5.4.5",
+    "typescript": "^5.5.3",
     "vitest": "^1.6.0"
   }
 }
