--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -24,7 +24,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/drwpow/cobalt-ui.git",
+    "url": "git+https://github.com/terrazzoapp/terrazzo.git",
     "directory": "packages/core"
   },
   "homepage": "https://cobalt-ui.pages.dev",
@@ -45,12 +45,15 @@
   },
   "dependencies": {
     "@cobalt-ui/utils": "workspace:^",
-    "@types/culori": "^2.1.0",
+    "@types/culori": "^2.1.1",
     "@types/deep-equal": "^1.0.4",
     "culori": "^4.0.1",
     "deep-equal": "^2.2.3",
     "parse-json": "^8.1.0",
     "scule": "^1.3.0",
-    "yaml": "^2.4.2"
+    "yaml": "^2.4.5"
+  },
+  "devDependencies": {
+    "strip-ansi": "^7.1.0"
   }
 }
