--- a/packages/plugin-css/package.json
+++ b/packages/plugin-css/package.json
@@ -18,7 +18,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/drwpow/cobalt-ui.git",
+    "url": "git+https://github.com/terrazzoapp/terrazzo.git",
     "directory": "packages/plugin-css"
   },
   "homepage": "https://cobalt-ui.pages.dev",
@@ -50,6 +50,6 @@
   "devDependencies": {
     "@cobalt-ui/cli": "workspace:^",
     "@cobalt-ui/core": "workspace:^",
-    "yaml": "^2.4.2"
+    "yaml": "^2.4.5"
   }
 }
