--- a/packages/plugin-tailwind/package.json
+++ b/packages/plugin-tailwind/package.json
@@ -18,7 +18,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/drwpow/cobalt-ui.git",
+    "url": "git+https://github.com/terrazzoapp/terrazzo.git",
     "directory": "packages/plugin-tailwind"
   },
   "license": "MIT",
@@ -46,7 +46,7 @@
   "devDependencies": {
     "@cobalt-ui/cli": "workspace:^",
     "@cobalt-ui/core": "workspace:^",
-    "tailwindcss": "^3.4.1",
-    "yaml": "^2.4.1"
+    "tailwindcss": "^3.4.6",
+    "yaml": "^2.4.5"
   }
 }
