--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -48,6 +48,7 @@
     "dotenv": "^16.4.5",
     "merge-anything": "^5.1.7",
     "picocolors": "^1.0.1",
+    "yaml-to-momoa": "^0.0.1",
     "yargs-parser": "^21.1.1"
   },
   "devDependencies": {
