--- a/packages/parser/biome.json
+++ b/packages/parser/biome.json
@@ -2,6 +2,7 @@
   "$schema": "https://biomejs.dev/schemas/1.6.4/schema.json",
   "extends": ["../../biome.json"],
   "files": {
+    "ignore": ["./lib/code-frame.js"],
     "include": ["./src/", "./test/"]
   }
 }
