--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -36,14 +36,11 @@
     "test:ts": "tsc --noEmit"
   },
   "dependencies": {
-    "@babel/code-frame": "^7.24.7",
     "@humanwhocodes/momoa": "^3.2.0",
     "@terrazzo/token-tools": "workspace:^",
     "@types/babel__code-frame": "^7.0.6",
     "@types/culori": "^2.1.1",
-    "@types/deep-equal": "^1.0.4",
     "culori": "^4.0.1",
-    "deep-equal": "^2.2.3",
     "is-what": "^4.1.16",
     "merge-anything": "^5.1.7",
     "picocolors": "^1.0.1",
@@ -51,6 +48,7 @@
     "yaml": "^2.5.0"
   },
   "devDependencies": {
+    "esbuild": "^0.23.0",
     "yaml-to-momoa": "^0.0.1"
   }
 }
